welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:19: error: ';' expected but 'else' found.
} else { return false }
  ^